--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 header{
 	width: 100%;
 	height: 100vh;
-	background-image: url('../Roomvi Clinic Website/images/bgimg.png');
+	background-image: url('../medsite.github.io/images/bgimg.png');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 
